[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "airflow-provider-kakao"
version = "0.0.1"
description = "KakaoTalk provider for Apache Airflow"
readme = "README.md"
authors = [{name = "SeungtaekSong", email = "glommer@kakao.com"}]
requires-python = ">=3.9"
dependencies = [
    "apache-airflow>=2.9.0",
    "requests>=2.20.0",
    "apache-airflow-providers-common-compat>=1.10.0"
]
classifiers = [
    "Framework :: Apache Airflow",
    "Framework :: Apache Airflow :: Provider",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.urls]
"Source" = "https://github.com/glommmer/airflow-provider-kakao"

[project.entry-points."apache_airflow_provider"]
provider_info = "airflow.providers.kakao.get_provider_info:get_provider_info"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
